--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'GOOGLE_PLACE_API_KEY', googlePlaceAPIKey
+    }
+
 }
 
 dependencies {
