--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".DetailActivity"></activity>
+
+        <activity android:name=".DetailActivity">
+
+        </activity>
     </application>
 
 </manifest>
