--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.wang.avi:library:2.1.3'
     compile 'com.google.android.gms:play-services-maps:9.4.0'
+    compile 'com.google.firebase:firebase-ads:9.4.0'
 }
