--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+googlePlaceAPIKey="AIzaSyCiHkJCZ9O-IZ_6JJwHcAnXelf3mx4Y1_I"
