Added PlaceAPI Key in gradle build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'GOOGLE_PLACE_API_KEY', googlePlaceAPIKey
+        it.resValue  "string", 'GOOGLE_PLACE_API_KEY', googlePlaceAPIKey
     }
 
 }
